# logger

./: .gitattributes  .gitignore  CMakeLists.txt  CONVENTIONS.md  LICENSE  Makefile  Makefile.win  README.md  build.bat  logger.cpp  logger.h  logger.hpp  logger_api.cpp  logger_stb.hpp  loggerstream.hpp  ship.sh
.github/workflows/: build.yaml
include/: loggerstream.hpp
include/stbstyle/: logger.h  loggerstream.hpp
src/: CMakeLists.txt  logger.h  logger_api.cpp
stbstyle/: Makefile  main.cpp
tests/lifetime/: Makefile  main.c  race_test.c
tests/stress/: Makefile  README.md  analyze.py  benchmark.sh  main.c  multithread.c  singlethread.c  stress.c  testn.sh  utils.h
usage/: Makefile  app  loggerstream.hpp  main.c  main.cpp  test.sh  test100.out  test1000.out
usage/c/: Makefile  Makefile.win  main.c  make.bat  test.c
usage/c++/: Makefile  Makefile.win  main.cpp  make.bat  test.py  time.txt
usage/c89/: Makefile  main.c
usage/deprecated/java/: Main.java  Makefile
usage/deprecated/javascript/: liblogger.js
usage/go/: Makefile  main.go
usage/go/logger/: liblogger.go  logger_test.go
usage/java/: LoggerLib.java  Main.java
usage/javascript/: liblogger.js  main.js
usage/python/: liblogger.py  main.py
usage/rust/: .gitignore  Cargo.toml  build.rs  liblogger.rs  main.rs  start.sh
